; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/extr_sdmmc_transaction.c_sdmmc_host_transaction_handler_init.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/extr_sdmmc_transaction.c_sdmmc_host_transaction_handler_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@s_request_mutex = common dso_local global i32* null, align 8
@ESP_ERR_NO_MEM = common dso_local global i64 0, align 8
@s_is_app_cmd = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i64 0, align 8
@ESP_PM_APB_FREQ_MAX = common dso_local global i32 0, align 4
@s_pm_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @sdmmc_host_transaction_handler_init() #0 {
  %1 = alloca i64, align 8
  %2 = load i32*, i32** @s_request_mutex, align 8
  %3 = icmp eq i32* %2, null
  %4 = zext i1 %3 to i32
  %5 = call i32 @assert(i32 %4)
  %6 = call i32* (...) @xSemaphoreCreateMutex()
  store i32* %6, i32** @s_request_mutex, align 8
  %7 = load i32*, i32** @s_request_mutex, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %11, label %9

9:                                                ; preds = %0
  %10 = load i64, i64* @ESP_ERR_NO_MEM, align 8
  store i64 %10, i64* %1, align 8
  br label %13

11:                                               ; preds = %0
  store i32 0, i32* @s_is_app_cmd, align 4
  %12 = load i64, i64* @ESP_OK, align 8
  store i64 %12, i64* %1, align 8
  br label %13

13:                                               ; preds = %11, %9
  %14 = load i64, i64* %1, align 8
  ret i64 %14
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32* @xSemaphoreCreateMutex(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
